configuración de docker y variable de entorno dinámico

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <title>Happy Checho</title>
   <base href="/">
+  <script>
+    var ENV = {
+      apiURL: "${apiURL}"
+    };
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://js.stripe.com/v3" async></script>
