--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <base href="/">
   <script>
     var ENV = {
-      apiURL: "${apiURL}"
+      apiURL: "${apiURL}",
+      SUPABASE_URL: "${SUPABASE_URL}",
     };
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
