--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <script>
     var ENV = {
-      apiURL: "${apiURL}",
+      API_URL: "${API_URL}",
       SUPABASE_URL: "${SUPABASE_URL}",
       SUPABASE_ANON_KEY: "${SUPABASE_ANON_KEY}",
       SUPABASE_SERVICE_ROLE_KEY: "${SUPABASE_SERVICE_ROLE_KEY}",
